# rusty-space-shooter

./: .gitignore  Cargo.toml  Justfile  LICENSE.md  README.md
game/: Cargo.toml
game/src/: colors.rs  game.rs  lib.rs  score.rs  state.rs  ui.rs
game/src/infrastructure/: direct.rs  hotreload.rs  mod.rs
game/src/math/: circle.rs  mod.rs  position.rs  rect.rs
game/src/shaders/: mod.rs
game/src/ui/: colors.rs  mod.rs
launcher/: Cargo.toml
launcher/src/: input.rs  main.rs  screen.rs  shader.rs  texture_cache.rs
launcher/src/hotreload/: binding.rs  mod.rs  watcher.rs
wit/: interface.wit
